tests/errors/syntax_errors/try.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
try:
    print(5)
except Exception as e:
    print(e)
